<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imageStatusDesc"
        android:src="@drawable/no_connection" />

    <TextView
        android:id="@+id/txtStatusDesc"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/defaultState" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_send"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp" >

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:inputType="textLongMessage"
            android:lines="3"
            android:scrollHorizontally="false" >
        </EditText>

        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_send" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_sent"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/lstMessagesSent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/listview_victim_messages">
    </ListView>

</LinearLayout>